add: pomodoros5 test data

--- a/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Properties/Resources.resx
+++ b/Pomodoro/Pomodoro.Bll/Pomodoro.Bll.Provider/Pomodoro.Bll.Provider.Mock/Properties/Resources.resx
@@ -16121,4 +16121,88 @@
     }
 ]</value>
   </data>
+  <data name="pomodoros5" xml:space="preserve">
+    <value>[  
+  {
+    "user": {
+      "name": "admin",
+      "id": "b41a9f1b-9c27-4985-9ba8-55d32614591d"
+    },
+    "title": "Pomodoro1",
+    "id": "7fa825a1-0309-4817-a9d1-2f75b5cce5c6",
+    "restDuration": {
+      "minutes": 15,
+      "hours": 0
+    },
+    "workDuration": {
+      "minutes": 15,
+      "hours": 1
+    }
+  },
+  {
+    "user": {
+      "name": "user1",
+      "id": "5c8ecd57-7c0e-4f42-a936-85385bf6796f"
+    },
+    "title": "Pomodoro2",
+    "id": "604031d9-6a61-46ae-8032-cfd778f785e8",
+    "restDuration": {
+      "minutes": 15,
+      "hours": 0
+    },
+    "workDuration": {
+      "minutes": 0,
+      "hours": 1
+    }
+  },
+  {
+    "user": {
+      "name": "user2",
+      "id": "b5294719-9563-4da8-a24b-893e3852a071"
+    },
+    "title": "Pomodoro3",
+    "id": "3b27ebba-0ac5-45c6-aae6-ea2c7c243930",
+    "restDuration": {
+      "minutes": 15,
+      "hours": 0
+    },
+    "workDuration": {
+      "minutes": 30,
+      "hours": 0
+    }
+  },
+  {
+    "user": {
+      "name": "admin",
+      "id": "b41a9f1b-9c27-4985-9ba8-55d32614591d"
+    },
+    "title": "Pomodoro4",
+    "id": "21b4c19e-e486-4305-9c34-b9d6a728add0",
+    "restDuration": {
+      "minutes": 15,
+      "hours": 0
+    },
+    "workDuration": {
+      "minutes": 30,
+      "hours": 0
+    }
+  },
+  {
+    "user": {
+      "name": "user1",
+      "id": "5c8ecd57-7c0e-4f42-a936-85385bf6796f"
+    },
+    "title": "Pomodoro5",
+    "id": "56350c5b-b9ca-4c1c-933d-51b163e4c323",
+    "restDuration": {
+      "minutes": 15,
+      "hours": 0
+    },
+    "workDuration": {
+      "minutes": 0,
+      "hours": 1
+    }
+  }
+]</value>
+  </data>
 </root>
